2022-12-01  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-10-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.17
	* configure.ac: Idem
	* configure: Idem

	* R/vw.R (vw): Get data location via function and not a constant
	which serializes data path -- thanks to Tomas Kalibera for the hint
	* DESCRIPTION (StagedInstall): No longer needed

2022-01-01  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-10-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.16
	* configure.ac: Idem

	* src/v_array.h (push_many): Protect one null pointer operation

2021-10-09  Dirk Eddelbuettel  <edd@debian.org>

	* configure.ac: Updated via 'autoupdate' and 'autoreconf
	--warnings=obsolete' to bring to autoconf 2.69 standards
	* configure: Idem

	* man/vw.Rd: Updated one URL to https
	* DESCRIPTION: Idem

2021-06-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): Add repo to URL field

2021-01-18  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-08-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.15
	* configure: Idem

	* src/cache.cc: Converted several casts to memcpy() call to appease ubsan
	* src/hasg.cc: Idem
	* src/simple_label.cc: Idem

	* .Rbuildignore: Skip inst/test/train-sets/0002.dat for smaller package
	* test/test5.r: Idem
	* test/test6.r: Idem
	* test/test7.r: Idem
	* test/test8.r: Idem

2020-07-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/sender.cc: Renamed variable from 'thread' to 'threads' to not
	confuse poor Solaris, and make it 'extern' while we are at it

2020-06-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.14

	* DESCRIPTION (URL): Updated to https://vowpalwabbit.org/
